complete responsive design

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
     <script src="vendors/bootstrap/css/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="resonsive.css">
     
 </head>
 <body>
@@ -19,7 +20,7 @@
                 <div class="container-fluid">
                   <div class="logobar">
                     <a class="navbar-brand" href="#">
-                        <img src="assets/image/logo.png" alt="">
+                        <img src="assets/image/logo.png" alt="" style="width: 100px;">
                     </a>
                   </div>
                   <div class="navlink">
@@ -72,8 +73,8 @@
 <!-- search section start -->
 <section id="search">
   <div class="container my-5">
-    <div class="textbox d-flex justify-content-center">
-      <div class="single">
+    <div class="textbox row justify-content-center">
+      <div class="single col-md-4">
         <form action="/action_page.php">
           <label for="city">CHANGE CITY</label><br>
           <select name="city" id="city">
@@ -84,7 +85,7 @@
           </select>
         </form>
       </div>
-      <div class="single">
+      <div class="single col-md-4">
         <form action="/action_page.php">
           <label for="city">SELECT LOCATION</label><br>
           <select name="city" id="city">
@@ -95,7 +96,7 @@
           </select>
         </form>
       </div>
-      <div class="single">
+      <div class="single col-md-4">
         <h3>SEARCH PRODUCTS</h3>
       </div>
     </div>
@@ -122,7 +123,7 @@
           </a>
         </div>
         <div class="col-md-6">
-          <img src="assets/image/4'.png" alt="">
+          <img src="assets/image/4'.png" alt="" class="image">
         </div>
       </div>
     </div>
@@ -201,7 +202,7 @@
             </div>
             <div class="col-md-8">
               <h3>Our Products</h3>
-              <p><i class="fa fa-calendar"></i> July 16,2019 <i class="fa fa-tag"></i>Fruits & vegetable</p>
+              <p><i class="fa fa-calendar"></i> July 16,2019 <i class="fa fa-tag"></i> Fruits & vegetable</p>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab deserunt sed nihil harum vero ipsum atque.
               </p>
               <a href="#">READ MORE <i class="fa fa-arrow-right"></i></a>
@@ -215,7 +216,7 @@
           </div>
           <div class="col-md-8">
             <h3>Our Products</h3>
-            <p><i class="fa fa-calendar"></i> July 16,2019 <i class="fa fa-tag"></i>Fruits & vegetable</p>
+            <p><i class="fa fa-calendar"></i> July 16,2019 <i class="fa fa-tag"></i> Fruits & vegetable</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab deserunt sed nihil harum vero ipsum atque.
             </p>
             <a href="#">READ MORE <i class="fa fa-arrow-right"></i></a>
